# medanki

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  MedAnki_Advanced_Claude_Workflows.md  MedAnki_Claude_Agents.md  MedAnki_Dependencies_Guide.md  MedAnki_Implementation_Plan.md  MedAnki_Setup_Guide.md  MedAnki_System_Design.md  MedAnki_WebApp_Design.md  README.md  cloudbuild-web.yaml  medanki_test_specification.py  pyproject.toml  setup.sh  taxonomy-plan.md
.claude/agents/: anki-specialist.md  devops.md  medical-nlp.md  python-backend.md  react-frontend.md  test-engineer.md
.claude/commands/: create-component.md  implement-service.md
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml  deploy.yml
data/taxonomies/: mcat.json  usmle_step1.json
data/test_fixtures/: sample.md  sample_notes.md
docker/: Dockerfile.api  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml  nginx.cloudrun.conf  nginx.conf
docs/: README.md  api-reference.md  architecture.md  authentication.md  data-sources.md  deployment.md  development.md  getting-started.md  taxonomy.md
docs/tutorials/: README.md  batch-processing.md  first-deck.md  optimizing-cards.md
docs/user-guide/: card-types.md  customization.md  faq.md  file-formats.md  getting-started.md  taxonomy.md  topic-input.md
scripts/: __init__.py  build_taxonomy_db.py  fetch_anking_sources.py  init_taxonomy_db.py  sync-worktrees.sh
scripts/ingest/: anking_export.py  huggingface.py  mesh_api.py
tests/: conftest.py
tests/e2e/: .gitignore  auth.spec.ts  card-generation.spec.ts  config.ts  download.spec.ts  fixtures.ts  full_flow.spec.ts  package-lock.json  package.json  playwright.config.ts  processing.spec.ts  production.spec.ts  saved-cards.spec.ts  taxonomy_browser.spec.ts  test_pdf_pipeline.py  topic_input.spec.ts  tsconfig.json  upload.spec.ts
tests/fixtures/: llm_responses.py
tests/integration/: conftest.py  test_auth_api.py  test_classification.py  test_classification_pipeline.py  test_export_pipeline.py  test_full_pipeline.py  test_generation_pipeline.py  test_ingestion_pipeline.py  test_taxonomy_data.py  test_taxonomy_indexing.py  test_taxonomy_pipeline.py  test_topic_generation.py
tests/unit/api/: test_auth.py  test_download.py  test_jobs.py  test_preview.py  test_processor.py  test_saved_cards.py  test_taxonomy.py  test_upload.py  test_websocket.py
tests/unit/cli/: test_config.py  test_generate.py  test_main.py  test_taxonomy.py
tests/unit/docs/: test_taxonomy_docs.py
tests/unit/export/: test_apkg.py  test_deck.py  test_models.py  test_tags.py
tests/unit/generation/: test_antitrivia.py  test_cloze.py  test_deduplicator.py  test_service.py  test_validator.py  test_vignette.py
tests/unit/ingest/: test_anking_parser.py  test_fetch_sources.py  test_huggingface_ingestor.py
tests/unit/ingestion/: __init__.py  test_pdf.py  test_powerpoint.py  test_service.py  test_text.py
tests/unit/models/: test_cards.py  test_document.py  test_enums.py  test_taxonomy.py
tests/unit/processing/: test_chunker.py  test_classifier.py  test_classifier_v2.py  test_embedder.py
tests/unit/scripts/: test_mesh_api.py
tests/unit/services/: test_cache.py  test_config.py  test_google_auth.py  test_jwt_service.py  test_llm.py  test_taxonomy.py  test_taxonomy_v2.py
tests/unit/storage/: test_auth_schema.py  test_sqlite.py  test_taxonomy_builder.py  test_taxonomy_repository.py  test_taxonomy_schema.py  test_user_repository.py  test_weaviate.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: auth.ts  client.ts  download.ts  feedback.ts  preview.ts  savedCards.ts  types.ts  upload.ts
web/src/api/__tests__/: client.test.ts
web/src/components/: Button.tsx  CardList.tsx  CardPreview.tsx  Chip.tsx  ConfirmDialog.tsx  ErrorMessage.tsx  FileUpload.tsx  FlashcardFeedback.tsx  GoogleLoginButton.tsx  InputModeSelector.tsx  Layout.tsx  OptionsPanel.tsx  ProgressBar.tsx  SaveCardsButton.tsx  SelectableCardList.tsx  StageList.tsx  Statistics.tsx  TopicInput.tsx
web/src/components/__tests__/: CardList.test.tsx  CardPreview.test.tsx  FileUpload.test.tsx  GoogleLoginButton.test.tsx  InputModeSelector.test.tsx  OptionsPanel.test.tsx  ProgressBar.test.tsx  SaveCardsButton.test.tsx  SelectableCardList.test.tsx  StageList.test.tsx  Statistics.test.tsx  TopicInput.test.tsx
web/src/hooks/: useApi.ts  useFeedback.ts  useFlashcardMetrics.ts  useWebSocket.ts
web/src/hooks/__tests__/: useWebSocket.test.ts
web/src/pages/: DownloadPage.tsx  ProcessingPage.tsx  TaxonomyBrowserPage.tsx  UploadPage.tsx
web/src/pages/__tests__/: DownloadPage.test.tsx  ProcessingPage.test.tsx  (+1 more)
web/src/stores/: appStore.ts  authStore.ts  jobStore.ts
web/src/test/: setup.ts
web/src/types/: index.ts
(+3 files in other folders)
