[project]
name = "medanki-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf4llm>=0.2.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.6",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[tool.pytest.ini_options]
pythonpath = ["packages/core/src", "packages/cli/src"]
asyncio_mode = "auto"
