[project]
name = "medanki-workspace"
version = "0.1.0"
description = "Medical flashcard generation from educational content"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.40.0",
    "genanki>=0.13.0",
    "instructor>=1.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-vcr>=1.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
medanki = { workspace = true }
medanki-cli = { workspace = true }
medanki-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/medanki"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["medanki", "medanki_cli", "medanki_api"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "vcr: marks tests using VCR cassettes",
]
