[project]
name = "medanki-workspace"
version = "0.1.0"
description = "Medical flashcard generation from educational content"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.40.0",
    "datasets>=3.0.0",
    "fastapi>=0.109.0",
    "genanki>=0.13.0",
    "httpx>=0.26.0",
    "instructor>=1.4.0",
    "numpy>=1.26.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pymupdf4llm>=0.2.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "reportlab>=4.4.6",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.12.0",
    "typer>=0.9.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-vcr>=1.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "types-aiofiles>=23.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
medanki = { workspace = true }
medanki-cli = { workspace = true }
medanki-api = { workspace = true }

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/medanki", "packages/api/src/medanki_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ASYNC"]
ignore = ["E501", "B008", "SIM102", "SIM117", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["medanki", "medanki_cli", "medanki_api"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["packages/core/src", "packages/cli/src", "packages/api/src", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "vcr: marks tests using VCR cassettes",
]
